--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
     "devDependencies": {
-      "@typescript-eslint/eslint-plugin": "^8.24.0",
-      "@typescript-eslint/parser": "^8.24.0",
-      "eslint-config-prettier": "^10.0.1",
-      "eslint-plugin-prettier": "^5.2.3"
+        "@typescript-eslint/eslint-plugin": "^8.24.0",
+        "@typescript-eslint/parser": "^8.24.0",
+        "eslint-config-prettier": "^10.0.1",
+        "eslint-plugin-prettier": "^5.2.3"
+    },
+    "dependencies": {
+        "lit": "^3.2.1"
     }
-  }
-  
+}
