--- a/.gitignore
+++ b/.gitignore
@@ -1,55 +1,50 @@
-# Dependencies
 node_modules/
-
 yarn.lock
-
-# Environment variables
 .env
 .env.local
 .env.*.local
-
-# Data directory
 data/
-
-# Build output
 dist/
 build/
-
-# Logs
 logs/
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-# IDE and editor files
 .idea/
 .vscode/
 *.swp
 *.swo
 .DS_Store
-
-# Test coverage
 coverage/
-
-# Temporary files
 tmp/
 temp/
-
-# Debug files
 .debug/
-
-# TypeScript cache
 *.tsbuildinfo
-
-# Optional npm cache directory
 .npm
-
-# Optional eslint cache
 .eslintcache
-
-# Optional stylelint cache
 .stylelintcache
-
-# Yarn Integrity file
 .yarn-integrity
+
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+venv/
+ENV/
+env/
+.env
+.venv
+pip-log.txt
+pip-delete-this-directory.txt
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+.pytest_cache/
