--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -6,3 +6,9 @@ fastapi>=0.100.0
 python-multipart>=0.0.6
 uvicorn>=0.23.0
 python-dotenv>=1.0.0
+requests>=2.28.0
+psutil>=5.9.0
+PyYAML>=6.0
+pytest>=7.0.0
+httpx>=0.24.0
+pytest-asyncio>=0.20.0
