--- a/api_gateway/package.json
+++ b/api_gateway/package.json
@@ -10,23 +10,25 @@
     "test": "jest"
   },
   "dependencies": {
-    "express": "^4.18.0",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
+    "@types/form-data": "^2.5.2",
     "axios": "^1.6.0",
-    "zod": "^3.22.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.18.0",
+    "form-data": "^4.0.2",
     "http-proxy-middleware": "^3.0.0",
-    "dotenv": "^16.0.0"
+    "multer": "^1.4.5-lts.1",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.0",
     "@types/cors": "^2.8.0",
+    "@types/express": "^4.17.0",
+    "@types/jest": "^29.0.0",
     "@types/multer": "^1.4.0",
     "@types/node": "^20.0.0",
-    "@types/jest": "^29.0.0",
-    "typescript": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
     "jest": "^29.0.0",
-    "ts-jest": "^29.0.0"
+    "ts-jest": "^29.0.0",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.0.0"
   }
 }
