--- a/api_gateway/tsconfig.json
+++ b/api_gateway/tsconfig.json
@@ -1,17 +1,17 @@
 {
   "compilerOptions": {
-    "target": "ES2020",                    
-    "module": "CommonJS",                
-    "moduleResolution": "node",          
-    "baseUrl": "./src",                     
-    "outDir": "./dist",                  
-    "esModuleInterop": true,                 
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,                         
-    "skipLibCheck": true,                   
-    "sourceMap": true,                     
-    "resolveJsonModule": true            
+    "target": "ES2020",                     /* Set the JavaScript language version for emitted JavaScript and include compatible library declarations. */
+    "module": "CommonJS",                   /* Specify what module code is generated. */
+    "moduleResolution": "node",           /* Specify how TypeScript looks up a file from a given module specifier. */
+    "baseUrl": "./src",                     /* Specify the base directory to resolve non-relative module names. */
+    "outDir": "./dist",                      /* Specify an output folder for all emitted files. */
+    "esModuleInterop": true,                 /* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
+    "forceConsistentCasingInFileNames": true,/* Ensure that casing is correct in imports. */
+    "strict": true,                          /* Enable all strict type-checking options. */
+    "skipLibCheck": true,                    /* Skip type checking all .d.ts files. */
+    "sourceMap": true,                       /* Create source map files for emitted JavaScript files. */
+    "resolveJsonModule": true              /* Enable importing .json files */
   },
-  "include": ["src/**/*.ts"],                
-  "exclude": ["node_modules", "**/*.spec.ts"] 
+  "include": ["src/**/*.ts"],                 /* Specifies a list of glob patterns that match files to be included in compilation. */
+  "exclude": ["node_modules", "**/*.spec.ts"] /* Specifies a list of glob patterns that match files to be excluded from compilation. */
 }
