--- a/ai_service/config/config.yaml
+++ b/ai_service/config/config.yaml
@@ -6,14 +6,12 @@ server:
   debug: true
 
 model:
-  # Style transfer configuration
   style_transfer:
-    num_reference_images: 3
+    num_reference_images: 1
     content_weight: 1.0
     style_weight: 1.0
     batch_size: 1
 
-  # Feature extraction configuration
   feature_extraction:
     model_name: "vgg19"
     layers:
@@ -23,13 +21,11 @@ model:
       - "conv4_1"
       - "conv5_1"
 
-# Data paths
 paths:
   period_mapped_data: "../data_processing/data/period-mapped/period_mapped_data.json"
   model_weights: "./models/weights"
   temp_storage: "./temp"
 
-# Processing settings
 processing:
   max_image_size: 1024
   output_size: 800
@@ -57,22 +53,39 @@ tuning:
   # Typical range: 100-500. Fewer steps = faster, closer to content image.
   num_steps: 300
 
+  # Learning rate for the Adam optimizer.
+  # Smaller values (e.g., 0.001-0.01) are more stable but converge slower.
+  # Larger values (e.g., 0.02-0.1) converge faster but risk instability/overshooting.
+  learning_rate: 0.02
+
   # VGG19 layers used for content loss.
-  # Deeper layers (like conv4_2) capture more semantic structure.
-  # Using earlier layers (e.g., conv3_2) preserves more fine detail but less overall structure.
   content_layers: [conv4_2]
 
   # VGG19 layers used for style loss.
-  # Using multiple layers captures style textures/patterns at different scales.
-  # Standard set provides a good balance.
   style_layers: [conv1_1, conv2_1, conv3_1, conv4_1, conv5_1]
 
 # Cloud service settings (Optional)
 cloud_service:
-  keras_space_url: "https://keras-io-neural-style-transfer.hf.space/run/predict"
+  gradio_space_id: "Hexii/Neural-Style-Transfer"
+  tfhub_magenta_model_url: "https://tfhub.dev/google/magenta/arbitrary-image-stylization-v1-256/2"
 
-# Cache settings
 cache:
   enabled: true
   max_size: 100
   expiry_minutes: 60
+
+post_processing:
+  unsharp_mask:
+    enabled: true
+    amount: 1.0       # Sharpening amount (e.g., 0.5 to 2.0)
+    sigma: 1.0        # Gaussian blur sigma (e.g., 0.5 to 2.0)
+    threshold: 0      # Threshold for sharpening (0-255)
+
+  clahe_contrast: # Contrast Limited Adaptive Histogram Equalization
+    enabled: false
+    clip_limit: 3.0   # Contrast limit (e.g., 1.0 to 5.0)
+    tile_grid_size: 8 # Size of grid for histogram equalization (e.g., 8 for 8x8 tiles)
+
+  saturation_boost:
+    enabled: false
+    factor: 3       # Saturation factor (1.0 = no change, >1.0 increases, <1.0 decreases)
