--- a/ai_service/requirements.txt
+++ b/ai_service/requirements.txt
@@ -12,3 +12,7 @@ PyYAML>=6.0
 pytest>=7.0.0
 httpx>=0.24.0
 pytest-asyncio>=0.20.0
+gradio_client>=0.10.0
+tensorflow>=2.10.0
+tensorflow_hub>=0.13.0
+opencv-python>=4.11.0
